--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,4 @@
-#Sun Jul 07 09:44:12 ICT 2019
+#Wed May 13 09:26:41 CST 2020
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 execution.default.webUi.enablePageLoadTimeout=false
 execution.default.webUi.pageLoadTimeout=30
